--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="github.com/DawnJBJ/cv/images" width="148" height="132" alt="" title="" /></td><!-- Col 1 -->
+      <td><img src="https://dawnjbj.github.io/cv/images" width="148" height="132" alt="" title="" /></td><!-- Col 1 -->
       <td>
         <h1>
           <div align="center">Dawn J B Johnson</div>
