--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://dawnjbj.github.io/cv/images/me.jpg" width="148" height="132" alt="" title="" /></td>
+      <td><img src="https:.../images/me.jpg" width="148" height="132" alt="" title="" /></td>
       <td>
         <h1>
           <div align="center">Dawn J B Johnson</div>
