--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <li> Basic Computer Repair</li>
     <li> Websites</li>
     <li> Notary </li>
-  <H3> Work Experence from 2010 - present</H3>
+  <H3> Work Experience from 2010 - present</H3>
     <table width="100%">
       <tr>
         <TH>
