--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <hr>
 
-        <a href="My Contact Page">Contact</a>
+        <a href="My Contact Information">Contact</a>
         <a href="My Hobby Page">Hobbies</a>
 
 
